feat: add api for create students
